--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,16 @@
 package:
   name: tensorflow
-  version: "0.7.1"
+  version: "0.8.0"
 
 build:
   number: 0
-  #  Google only supplies 0.7.1 whl files for Linux Python 2.7 and 3.4
-  #  and OS X Python 2.7 and 3.5
+  #  Google supplies 0.8.0 whl files for:
+  # - Linux: Python 2.7 and 3.4
+  # - OS X: Python 2.7 and 3 (3.4 and 3.5 works at the moment)
   skip: True  # [win]
   skip: True  # [py26]
   skip: True  # [py33]
   skip: True  # [py35 and linux]
-  skip: True  # [py34 and osx]
   entry_points:
     - tensorboard = tensorflow.tensorboard.tensorboard:main
 
