--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,15 @@
 package:
   name: tensorflow
-  version: "0.8.0"
+  version: "0.9.0"
 
 build:
   number: 0
-  #  Google supplies 0.8.0 whl files for:
-  # - Linux: Python 2.7 and 3.4
-  # - OS X: Python 2.7 and 3 (3.4 and 3.5 works at the moment)
+  #  Google supplies 0.9.0 whl files for:
+  # - Linux: Python 2.7, 3.4 and 3.5
+  # - OS X: Python 2.7, 3.4 and 3.5
   skip: True  # [win]
   skip: True  # [py26]
   skip: True  # [py33]
-  skip: True  # [py35 and linux]
   entry_points:
     - tensorboard = tensorflow.tensorboard.tensorboard:main
 
@@ -42,3 +41,4 @@ about:
 extra:
   recipe-maintainers:
     - jjhelmus
+    - danielfrg
