--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: tensorflow
-  version: "0.9.0"
+  version: "0.10.0"
 
 build:
   number: 0
-  #  Google supplies 0.9.0 whl files for:
+  #  Google supplies 0.10.0 whl files for:
   # - Linux: Python 2.7, 3.4 and 3.5
   # - OS X: Python 2.7, 3.4 and 3.5
   skip: True  # [win]
@@ -17,13 +17,15 @@ requirements:
   build:
     - python
     - pip
-    - numpy >=1.10.1
+    - mock >=2.0.0
+    - numpy >=1.8.2
     - protobuf ==3.0.0b2
     - six >=1.10.0
     - wheel
   run:
     - python
-    - numpy >=1.10.1
+    - mock >=2.0.0
+    - numpy >=1.8.2
     - protobuf ==3.0.0b2
     - six >=1.10.0
 
