--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "0.10.0"
+  version: "0.11.0rc0"
 
 build:
   number: 0
@@ -18,15 +18,15 @@ requirements:
     - python
     - pip
     - mock >=2.0.0
-    - numpy >=1.8.2
-    - protobuf ==3.0.0b2
+    - numpy >=1.11.0
+    - protobuf ==3.0.0
     - six >=1.10.0
     - wheel
   run:
     - python
     - mock >=2.0.0
-    - numpy >=1.8.2
-    - protobuf ==3.0.0b2
+    - numpy >=1.10.0
+    - protobuf ==3.0.0
     - six >=1.10.0
 
 test:
