--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: tensorflow
-  version: "0.11.0rc0"
+  version: "0.11.0rc2"
 
 build:
   number: 0
-  #  Google supplies 0.10.0 whl files for:
+  #  Google supplies whl files for:
   # - Linux: Python 2.7, 3.4 and 3.5
   # - OS X: Python 2.7, 3.4 and 3.5
   skip: True  # [win]
