--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,11 +3,13 @@ package:
   version: "0.12.1"
 
 build:
-  number: 0
+  number: 1
   #  Google supplies whl files for:
   # - Linux: Python 2.7, 3.4 and 3.5
   # - OS X: Python 2.7, 3.4 and 3.5
-  skip: True  # [win]
+  # - Win-64: Python 3.5
+  skip: True  # [win32]
+  skip: True  # [win64 and not py35]
   skip: True  # [py26]
   skip: True  # [py33]
   entry_points:
@@ -26,7 +28,7 @@ requirements:
     - python
     - mock >=2.0.0
     - numpy >=1.11.0
-    - protobuf ==3.0.0
+    - protobuf ==3.1.0
     - six >=1.10.0
 
 test:
