--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: tensorflow
-  version: "0.12.1"
+  version: "1.0.0"
 
 build:
-  number: 2
+  number: 0
   #  Google supplies whl files on PyPI for:
   # - Linux: Python 2.7, 3.3, 3.4, 3.5 and 3.6
   # - OS X: Python 2.7, 3.5 and 3.6
@@ -22,14 +22,14 @@ requirements:
     - pip
     - mock >=2.0.0
     - numpy >=1.11.0
-    - protobuf ==3.1.0
+    - protobuf >=3.1.0
     - six >=1.10.0
-    - wheel >=0.26
+    - wheel
   run:
     - python
     - mock >=2.0.0
     - numpy >=1.11.0
-    - protobuf ==3.1.0
+    - protobuf >=3.1.0
     - six >=1.10.0
 
 test:
