--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "1.0.0"
+  version: "1.1.0"
 
 build:
   number: 0
@@ -22,15 +22,17 @@ requirements:
     - pip
     - mock >=2.0.0
     - numpy >=1.11.0
-    - protobuf >=3.1.0
+    - protobuf >=3.2.0
     - six >=1.10.0
     - wheel
+    - werkzeug >=0.11.10
   run:
     - python
     - mock >=2.0.0
     - numpy >=1.11.0
-    - protobuf >=3.1.0
+    - protobuf >=3.2.0
     - six >=1.10.0
+    - werkzeug >=0.11.10
 
 test:
   imports:
