--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,9 +7,9 @@ build:
   #  Google supplies whl files on PyPI for:
   # - Linux: Python 2.7, 3.3, 3.4, 3.5 and 3.6
   # - OS X: Python 2.7, 3.5 and 3.6
-  # - Win-64: Python 3.5
+  # - Win-64: Python 3.5 and 3.6
   skip: True  # [win32]
-  skip: True  # [win64 and not py35]
+  skip: True  # [win64 and py<35]
   skip: True  # [osx and py34]
   skip: True  # [py26]
   skip: True  # [py33]
