--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "1.3.0"
+  version: "1.4.0"
 
 build:
   number: 0
@@ -22,15 +22,12 @@ requirements:
     - pip
   run:
     - python
-    - mock >=2.0.0
-    - numpy >=1.11.0
-    - protobuf >=3.2.0
+    - enum34 >=1.1.6  # [py<34]
+    - mock >=2.0.0    # [py27]
+    - numpy >=1.12.1
+    - protobuf >=3.3.0
     - six >=1.10.0
-    - werkzeug >=0.11.10
-    - markdown >=2.6.8
-    - bleach ==1.5.0
-    - backports.weakref ==1.0rc1
-    - html5lib ==0.9999999
+    - tensorboard >=0.4.0rc1,<0.5.0
 
 test:
   imports:
@@ -49,3 +46,5 @@ extra:
     - danielfrg
     - waitingkuo
     - ghego
+    - hajapy
+    - dhirschfeld
