--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "1.4.0"
+  version: "1.5.0"
 
 build:
   number: 0
@@ -25,9 +25,11 @@ requirements:
     - enum34 >=1.1.6  # [py<34]
     - mock >=2.0.0    # [py27]
     - numpy >=1.12.1
-    - protobuf >=3.3.0
+    - protobuf >=3.4.0
     - six >=1.10.0
-    - tensorboard >=0.4.0rc1,<0.5.0
+    - tensorboard >=1.5.0,<1.6.0
+    - backports.weakref >=1.0rc1
+    # not on conda yet? absl-py (>=0.1.6)
 
 test:
   imports:
