--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - pip
   run:
     - python
+    - absl-py >=0.1.6
     - enum34 >=1.1.6  # [py<34]
     - mock >=2.0.0    # [py27]
     - numpy >=1.12.1
@@ -29,7 +30,6 @@ requirements:
     - six >=1.10.0
     - tensorboard >=1.5.0,<1.6.0
     - backports.weakref >=1.0rc1
-    # not on conda yet? absl-py (>=0.1.6)
 
 test:
   imports:
