--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "1.5.1"
+  version: "1.8.0"
 
 build:
   number: 0
@@ -28,8 +28,13 @@ requirements:
     - numpy >=1.12.1
     - protobuf >=3.4.0
     - six >=1.10.0
-    - tensorboard >=1.5.0,<1.6.0
     - backports.weakref >=1.0rc1
+    - astor
+    - grpcio
+    - termcolor
+    - gast
+    - tensorboard ==1.8.0
+
 
 test:
   imports:
@@ -50,3 +55,4 @@ extra:
     - ghego
     - hajapy
     - dhirschfeld
+    - gilbertfrancois
