--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,8 +33,7 @@ requirements:
     - grpcio
     - termcolor
     - gast
-    - tensorboard >=1.7.0
-
+    - tensorboard >=1.7.0,<1.8.0
 
 test:
   imports:
