--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tensorflow
-  version: "1.5.1"
+  version: "1.6.0"
 
 build:
   number: 0
@@ -23,12 +23,16 @@ requirements:
   run:
     - python
     - absl-py >=0.1.6
+    - astor >=0.6.0
     - enum34 >=1.1.6  # [py<34]
+    - gast >=0.2.0
+    - grpcio >=1.8.6
     - mock >=2.0.0    # [py27]
-    - numpy >=1.12.1
+    - numpy >=1.13.3
     - protobuf >=3.4.0
     - six >=1.10.0
-    - tensorboard >=1.5.0,<1.6.0
+    - tensorboard >=1.6.0,<1.7.0
+    - termcolor >=1.1.0
     - backports.weakref >=1.0rc1
 
 test:
