--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,18 +22,18 @@ requirements:
     - pip
   run:
     - python
-    - absl-py >=0.1.6
-    - enum34 >=1.1.6  # [py<34]
-    - mock >=2.0.0    # [py27]
-    - numpy >=1.12.1
-    - protobuf >=3.4.0
-    - six >=1.10.0
-    - backports.weakref >=1.0rc1
-    - astor
-    - grpcio
-    - termcolor
-    - gast
-    - tensorboard >=1.7.0,<1.8.0
+    - absl-py >= 0.1.6
+    - astor >= 0.6.0
+    - gast >= 0.2.0
+    - numpy >= 1.13.3
+    - six >= 1.10.0
+    - protobuf >= 3.4.0
+    - tensorboard >= 1.8.0, < 1.9.0
+    - termcolor >= 1.1.0
+    - grpcio >= 1.8.6
+    - mock >=2.0.0                # [py27]
+    - enum34 >=1.1.6              # [py<34]
+    - backports.weakref >=1.0rc1  # [py<34]
 
 test:
   imports:
