--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ build:
   skip: True  # [py26]
   skip: True  # [py33]
   entry_points:
-    - tensorboard = tensorflow.tensorboard.tensorboard:main
+    - tensorboard = tensorboard.main:run_main
 
 requirements:
   build:
@@ -31,7 +31,6 @@ requirements:
     - tensorboard >=1.8.0, <1.9.0
     - termcolor >=1.1.0
     - grpcio >=1.8.6
-    - mock >=2.0.0                # [py27]
     - enum34 >=1.1.6              # [py<34]
     - backports.weakref >=1.0rc1  # [py<34]
 
