--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,16 @@ build:
   skip: True  # [py26]
   skip: True  # [py33]
   entry_points:
+    - freeze_graph = tensorflow.python.tools.freeze_graph:run_main
+    - toco_from_protos = tensorflow.contrib.lite.toco.python.toco_from_protos:main
+    - toco = tensorflow.contrib.lite.toco.python.toco_wrapper:main
+    - saved_model_cli = tensorflow.python.tools.saved_model_cli:main
+    # We need to keep the TensorBoard command, even though the console script
+    # is now declared by the tensorboard pip package. If we remove the
+    # TensorBoard command, pip will inappropriately remove it during install,
+    # even though the command is not removed, just moved to a different wheel.
     - tensorboard = tensorboard.main:run_main
+
 
 requirements:
   build:
