--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,6 +44,8 @@ requirements:
     - backports.weakref >=1.0rc1  # [py2k]
 
 test:
+  requires:
+    - mock >=2.0.0                # [py2k]
   imports:
     # Skip the import test on Linux as wheel file require a more recent
     # version of GLIBC++ than the VM used to build and test package.
