--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,6 +50,11 @@ test:
     # Skip the import test on Linux as wheel file require a more recent
     # version of GLIBC++ than the VM used to build and test package.
     - tensorflow  # [not linux]
+  commands:
+    - tensorboard --help |grep USAGE         # [not win]
+    - freeze_graph --help |grep usage        # [not win]
+    - toco_from_protos --help |grep usage    # [not win]
+    - saved_model_cli --help |grep usage     # [not win]
 
 about:
   home: http://tensorflow.org/
