--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,19 +42,19 @@ requirements:
 
 test:
 
-  # imports:
+  imports:
     # Skip the import test on Linux as wheel file require a more recent
     # version of GLIBC++ than the VM used to build and test package.
     # Also skip on OSX due to OSX version requirements, see
     # https://github.com/conda-forge/tensorflow-feedstock/pull/62
-    # - tensorflow  # [not linux]
+     - tensorflow  # [win]
   commands:
-    - tensorboard --help | grep USAGE        # [osx]
+    # - tensorboard --help | grep USAGE        # [osx]
     - tensorboard --help | findstr USAGE     # [win]
-    - freeze_graph --help                    # [not linux]
-    - toco_from_protos --help                # [osx]
-    - toco --help                            # [osx]
-    - saved_model_cli --help                 # [not linux]
+    - freeze_graph --help                    # [win]
+    #- toco_from_protos --help                # [osx]
+    #- toco --help                            # [osx]
+    - saved_model_cli --help                 # [win]
 
 about:
   home: http://tensorflow.org/
