dont grep for usage in tensorboard test

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,12 +49,12 @@ test:
     # https://github.com/conda-forge/tensorflow-feedstock/pull/62
      - tensorflow  # [win]
   commands:
-    # - tensorboard --help | grep USAGE        # [osx]
-    - tensorboard --help | findstr USAGE     # [win]
-    - freeze_graph --help                    # [win]
+    # - tensorboard --help | grep USAGE       # [osx]
+    - tensorboard --help                      # [win]
+    - freeze_graph --help                     # [win]
     #- toco_from_protos --help                # [osx]
     #- toco --help                            # [osx]
-    - saved_model_cli --help                 # [win]
+    - saved_model_cli --help                  # [win]
 
 about:
   home: http://tensorflow.org/
