--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - numpy >=1.13.3
     - six >=1.10.0
     - protobuf >=3.6.0
-    - tensorboard 1.12.*
+    #- tensorboard 1.12.*  # NB: tensorboard is now bundled in the tensorflow wheel.
     - termcolor >=1.1.0
     - grpcio >=1.8.6
     - enum34 >=1.1.6              # [py<34]
