--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ requirements:
     - backports.weakref >=1.0rc1  # [py<34]
     - mock >=2.0.0                # [py2k]
     - keras-applications
+    - keras-preprocessing
 
 test:
 
