--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,15 +33,15 @@ requirements:
     - gast >=0.2.0
     - numpy >=1.16.1
     - six >=1.10.0
-    - protobuf >=3.6.0
+    - protobuf >=3.6.1
     #- tensorboard 1.12.*  # NB: tensorboard is now bundled in the tensorflow wheel.
     - termcolor >=1.1.0
     - grpcio >=1.8.6
     - enum34 >=1.1.6              # [py<34]
     - backports.weakref >=1.0rc1  # [py<34]
     - mock >=2.0.0                # [py2k]
-    - keras-applications
-    - keras-preprocessing
+    - keras-applications >=1.0.6
+    - keras-preprocessing >=1.0.5
 
 test:
 
