--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - mock >=2.0.0                # [py2k]
     - keras-applications >=1.0.6
     - keras-preprocessing >=1.0.5
+    - tensorflow-estimator >=1.13.0,<1.14.0rc0
 
 test:
 
