--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7vc14.yaml
@@ -1,24 +1,27 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '5.4'
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '5.4'
-docker_image:
-- condaforge/linux-anvil-comp7
+- vs2015
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  vc:
+    max_pin: x
   zlib:
     max_pin: x.x
 python:
-- '3.6'
+- '3.7'
+vc:
+- '14'
+zip_keys:
+- - python
+  - vc
+  - c_compiler
+  - cxx_compiler
 zlib:
 - '1.2'
