--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,9 +1,1 @@
-* @danielfrg
-* @dhirschfeld
-* @dougalsutherland
-* @farhantejani
-* @ghego
-* @gilbertfrancois
-* @hajapy
-* @jjhelmus
-* @waitingkuo
+* @danielfrg @dhirschfeld @dougalsutherland @farhantejani @ghego @gilbertfrancois @hajapy @jjhelmus @waitingkuo
