--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -71,6 +71,15 @@ requirements:
 
 outputs:
   - name: tensorflow
+    build:
+      entry_points:
+        - freeze_graph = tensorflow.python.tools.freeze_graph:run_main
+        - toco_from_protos = tensorflow.lite.toco.python.toco_from_protos:main
+        - tflite_convert = tensorflow.lite.python.tflite_convert:main
+        - toco = tensorflow.lite.python.tflite_convert:main
+        - saved_model_cli = tensorflow.python.tools.saved_model_cli:main
+        - tf_upgrade_v2 = tensorflow.tools.compatibility.tf_upgrade_v2_main:main
+        - tensorboard = tensorboard.main:run_main
     files:
       - lib/python{{ python }}/site-packages/tensorflow
       - lib/python{{ python }}/site-packages/tensorflow-{{ version }}.dist-info
@@ -102,14 +111,6 @@ outputs:
         - tflite_convert --help  # [not win]
         - toco_from_protos --help  # [not win]
         - toco --help  # [not win]
-    entry_points:
-      - freeze_graph = tensorflow.python.tools.freeze_graph:run_main
-      - toco_from_protos = tensorflow.lite.toco.python.toco_from_protos:main
-      - tflite_convert = tensorflow.lite.python.tflite_convert:main
-      - toco = tensorflow.lite.python.tflite_convert:main
-      - saved_model_cli = tensorflow.python.tools.saved_model_cli:main
-      - tf_upgrade_v2 = tensorflow.tools.compatibility.tf_upgrade_v2_main:main
-      - tensorboard = tensorboard.main:run_main
 
   - name: libtensorflow
     script: cp_libtensorflow.sh  # [unix]
