--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -10,12 +10,12 @@ jobs:
   strategy:
     maxParallel: 4
     matrix:
-      win_python3.6vc14:
-        CONFIG: win_python3.6vc14
+      win_vc14:
+        CONFIG: win_vc14
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
-      win_python3.7vc14:
-        CONFIG: win_python3.7vc14
+      win_vc9:
+        CONFIG: win_vc9
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
   steps:
