--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,25 +12,23 @@ package:
 
 source:
   fn: {{ fn }}
-  url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz  # [linux]
-  sha256: 7cd19978e6bc7edc2c847bce19f95515a742b34ea5e28e4389dade35348f58ed  # [linux]
+  url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz  # [unix]
+  sha256: 7cd19978e6bc7edc2c847bce19f95515a742b34ea5e28e4389dade35348f58ed  # [unix]
 
-  url: https://pypi.io/packages/{{ pyver }}/t/tensorflow/{{ fn }}  # [not linux]
-  sha256: 0f305f3c461ed2ce5e0b65fccc7b7452f483c7935dd8a52a466d622e642fdea8  # [osx and py27]
-  sha256: ba29e66331cd2a8f824e0fa937ce44bd624bc37739f2f083694e473051d89ace  # [osx and py36]
-  sha256: 2fc989a5d3be9f3dc96c20deaa3d5cc66d2bf76fe069c202c2914a7f4b5a9a35  # [osx and py37]
-
+  url: https://pypi.io/packages/{{ pyver }}/t/tensorflow/{{ fn }}  # [not unix]
   sha256: d7341617aedd73c2c847755e87697e9c19eb625c73da26d6cd669220c5565119  # [win and py36]
   sha256: a4f154fa98cde5974117e05af444e0bed84cf431b8129c78a2de03a1ff7201c9  # [win and py37]
 
   patches:
-    - patches/0001-add-rt-to-linkopts.patch  # [linux]
-    - patches/0002-stable-image-rotate-test.patch  # [linux]
-    - patches/0003-relax-tolerence-in-special_math_test.patch  # [linux]
-    - patches/0004-skip-read-only-debugger_cli_common-test.patch  # [linux]
-    - patches/0005-fix-lookup_ops-test.patch  # [linux]
-    - patches/0006-relax-precision-in-matrix_log_op_test.patch  # [linux]
-    - patches/unbundle_llvm.patch  # [linux]
+    - patches/0001-add-rt-to-linkopts.patch                                     # [linux]
+    - patches/0002-stable-image-rotate-test.patch                               # [linux]
+    - patches/0003-relax-tolerence-in-special_math_test.patch                   # [linux]
+    - patches/0004-skip-read-only-debugger_cli_common-test.patch                # [linux]
+    - patches/0005-fix-lookup_ops-test.patch                                    # [linux]
+    - patches/0006-relax-precision-in-matrix_log_op_test.patch                  # [linux]
+    - 0007-Add-init-symbol-names-prefixed-with-an-underscore.patch              # [osx]
+    - 0008-Add-alternate-clock_gettime-implementation-for-macOS.patch           # [osx]
+    - patches/unbundle_llvm.patch                                               # [unix]
 
 build:
   number: 1
@@ -49,16 +47,16 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}  # [linux]
-    - {{ compiler('cxx') }}  # [linux]
-    - bazel >=0.19.0,<=0.21.0  # [linux]
+    - {{ compiler('c') }}       # [unix]
+    - {{ compiler('cxx') }}     # [unix]
+    - bazel >=0.19.0,<=0.21.0   # [unix]
+    - nasm                      # [unix]
   host:
     # conda build requirements
     - python
     - pip
     - setuptools <=39.1.0
-    - swig  # [linux]
-    - zlib  # [linux]
+    - swig                      # [unix]
     # requirements specified by the package itself
     - absl-py >=0.1.6
     - astor >=0.6.0
@@ -66,7 +64,11 @@ requirements:
     - keras-applications >=1.0.6
     - keras-preprocessing >=1.0.5
     - numpy 1.13.3  # [py<37]
-    - llvmdev   # [linux]
+    - llvmdev                   # [unix]
+    - zlib                      # [unix]
+    - libprotobuf               # [unix]
+    - libpng                    # [unix]
+    - curl                      # [unix]
     # The requirement is numpy >=1.13 but no builds of numPy 1.13 are
     # available for Python 3.7
     - numpy 1.14.6  # [py==37]
@@ -74,7 +76,7 @@ requirements:
     - protobuf >=3.6.1
     - termcolor >=1.1.0
     - grpcio >=1.8.6
-    - wheel >=0.26  # [linux]
+    - wheel >=0.26              # [unix]
     - mock >=2.0.0  # [py2k]
     - backports.weakref >=1.0rc1  # [py2k]
     - enum34 >=1.1.6  # [py2k]
@@ -86,9 +88,13 @@ requirements:
     - gast >=0.2.0
     - keras-applications >=1.0.6
     - keras-preprocessing >=1.0.5
-    - {{ pin_compatible('numpy') }}  # [linux]
-    - numpy >=1.13.3  # [not linux]
+    - {{ pin_compatible('numpy') }}  # [unix]
+    - numpy >=1.13.3            # [not unix]
     - six >=1.10.0
+    - zlib                      # [unix]
+    - libprotobuf               # [unix]
+    - libpng                    # [unix]
+    - curl                      # [unix]
     - protobuf >=3.6.1
     - termcolor >=1.1.0
     - grpcio >=1.8.6
