--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,9 @@
 {% set version = "1.13.1" %}
 
 {% set pyver = "cp{}{}".format(PY_VER[0], PY_VER[2]) %}
-{% set platform = "macosx_10_11_x86_64" %}  # [osx]
 {% set platform = "win_amd64" %}  # [win]
-{% set fn = "{}-{}-{}-{}m-{}.whl".format("tensorflow", version, pyver, pyver, platform) %}  # [not linux]
-{% set fn = "tensorflow-{{ version }}.tar.gz" %}  # [linux]
+{% set fn = "{}-{}-{}-{}m-{}.whl".format("tensorflow", version, pyver, pyver, platform) %}  # [not unix]
+{% set fn = "tensorflow-{{ version }}.tar.gz" %}  # [unix]
 
 package:
   name: tensorflow
@@ -26,7 +25,7 @@ source:
     - patches/0004-skip-read-only-debugger_cli_common-test.patch                # [linux]
     - patches/0005-fix-lookup_ops-test.patch                                    # [linux]
     - patches/0006-relax-precision-in-matrix_log_op_test.patch                  # [linux]
-    #- patches/0007-Add-init-symbol-names-prefixed-with-an-underscore.patch     # [osx]
+    - patches/0007-Add-init-symbol-names-prefixed-with-an-underscore.patch      # [osx]
     - patches/0008-Add-alternate-clock_gettime-implementation-for-macOS.patch   # [osx]
     - patches/unbundle_llvm.patch                                               # [unix]
 
