--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,7 +67,7 @@ requirements:
     - zlib                      # [unix]
     - libprotobuf               # [unix]
     - libpng                    # [unix]
-    - curl                      # [unix]
+    - libcurl                   # [unix]
     # The requirement is numpy >=1.13 but no builds of numPy 1.13 are
     # available for Python 3.7
     - numpy 1.14.6  # [py==37]
@@ -93,7 +93,7 @@ requirements:
     - zlib                      # [unix]
     - libprotobuf               # [unix]
     - libpng                    # [unix]
-    - curl                      # [unix]
+    - libcurl                   # [unix]
     - protobuf >=3.6.1
     - termcolor >=1.1.0
     - grpcio >=1.8.6
