let tensorflow-base be requirement of tensorflow

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,9 +67,11 @@ requirements:
     - backports.weakref >=1.0rc1  # [py2k]
     - enum34 >=1.1.6  # [py2k]
     - tensorflow-estimator >=1.13.0,<1.14.0a0
+  run:
+    - tensorflow-base
 
 outputs:
-  - name: tensorflow
+  - name: tensorflow-base
     script: build_pkg.sh  # [unix]
     script: build_pkg.bat  # [win]
     build:
