--- a/.ci_support/osx_python2.7.yaml
+++ b/.ci_support/osx_python2.7.yaml
@@ -1,16 +1,40 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+c_compiler:
+- clang
+c_compiler_version:
+- '8.0'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- clangxx
+cxx_compiler_version:
+- '8.0'
+libcurl:
+- '7.64'
+libpng:
+- '1.6'
+libprotobuf:
+- '3.8'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 pin_run_as_build:
+  libcurl:
+    max_pin: x
+  libpng:
+    max_pin: x.x
+  libprotobuf:
+    max_pin: x.x
   python:
     min_pin: x.x
     max_pin: x.x
+  zlib:
+    max_pin: x.x
 python:
 - '2.7'
+zlib:
+- '1.2'
