--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -115,6 +115,11 @@ outputs:
         - backports.weakref >=1.0rc1  # [py2k]
         - enum34 >=1.1.6  # [py2k]
         - tensorflow-estimator >=1.13.0,<1.14.0a0
+        # pin
+        - zlib                      # [linux]
+        - libprotobuf               # [linux]
+        - libpng                    # [linux]
+        - libcurl                   # [linux]
       run:
         - python
         - absl-py >=0.1.6
@@ -122,13 +127,13 @@ outputs:
         - gast >=0.2.0
         - keras-applications >=1.0.6
         - keras-preprocessing >=1.0.5
-        - {{ pin_subpackage('numpy') }}  # [linux]
+        - {{ pin_compatible('numpy') }}  # [linux]
         - numpy >=1.13.3            # [not linux]
         - six >=1.10.0
-        - {{ pin_subpackage('zlib') }}  # [linux]
-        - {{ pin_subpackage('libprotobuf') }}  # [linux]
-        - {{ pin_subpackage('libpng') }}   # [linux]
-        - {{ pin_subpackage('libcurl') }}  # [linux]
+        - {{ pin_compatible('zlib') }}  # [linux]
+        - {{ pin_compatible('libprotobuf') }}  # [linux]
+        - {{ pin_compatible('libpng') }}   # [linux]
+        - {{ pin_compatible('libcurl') }}  # [linux]
         - protobuf >=3.6.1
         - termcolor >=1.1.0
         - grpcio >=1.8.6
