--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -130,10 +130,10 @@ outputs:
         - {{ pin_compatible('numpy') }}  # [linux]
         - numpy >=1.13.3            # [not linux]
         - six >=1.10.0
-        - {{ pin_compatible('zlib') }}  # [linux]
-        - {{ pin_compatible('libprotobuf') }}  # [linux]
-        - {{ pin_compatible('libpng') }}   # [linux]
-        - {{ pin_compatible('libcurl') }}  # [linux]
+        - zlib  # [linux]
+        - libprotobuf  # [linux]
+        - libpng  # [linux]
+        - libcurl  # [linux]
         - protobuf >=3.6.1
         - termcolor >=1.1.0
         - grpcio >=1.8.6
