--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -91,6 +91,10 @@ outputs:
         - tf_upgrade_v2 = tensorflow.tools.compatibility.tf_upgrade_v2_main:main
         - tensorboard = tensorboard.main:run_main
     requirements:
+      # build requirements needs to pick up the compiler run_exports
+      build:
+        - {{ compiler('c') }}       # [linux]
+        - {{ compiler('cxx') }}     # [linux]
       host:
         # conda build requirements
         - python
@@ -156,6 +160,16 @@ outputs:
     script: cp_libtensorflow.sh  # [unix]
     build:
       skip: true  # [not linux]
+    requirements:
+      # build requirements needs to pick up the compiler run_exports
+      build:
+        - {{ compiler('c') }}       # [linux]
+        - {{ compiler('cxx') }}     # [linux]
+      # host requirements to pick up run_exports
+      host:
+        - libz  # [linux]
+        - libcurl  # [linux]
+
     test:
       commands:
         - test -f $PREFIX/lib/libtensorflow.so  # [not win]
@@ -165,6 +179,14 @@ outputs:
     build:
       skip: true  # [not linux]
     requirements:
+      # build requirements needs to pick up the compiler run_exports
+      build:
+        - {{ compiler('c') }}       # [linux]
+        - {{ compiler('cxx') }}     # [linux]
+      # host requirements to pick up run_exports
+      host:
+        - libz  # [linux]
+        - libcurl  # [linux]
       run:
         - libprotobuf
         - eigen
