add tests for libtensorflow and libtensorflow_cc

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -172,8 +172,11 @@ outputs:
         - zlib  # [linux]
 
     test:
+      files:
+        - test_c.c
       commands:
         - test -f $PREFIX/lib/libtensorflow.so  # [not win]
+        - $CC -o test_c -L${PREFIX}/lib/ -ltensorflow -I${PREFIX}/include/ test_c.c  # [not win]
 
   - name: libtensorflow_cc
     script: cp_libtensorflow_cc.sh  # [unix]
@@ -192,8 +195,11 @@ outputs:
         - libprotobuf
         - nsync
     test:
+      files:
+        - test_cc.cc
       commands:
         - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win]
+        - $CXX -std=c++11 -o test_cc -L${PREFIX}/lib/ -ltensorflow_cc -ltensorflow_framework -I${PREFIX}/include/ test_cc.cc  # [not win]
 
 about:
   home: http://tensorflow.org/
