--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -174,6 +174,8 @@ outputs:
     test:
       files:
         - test_c.c
+      requires:
+        - {{ compiler('c') }}
       commands:
         - test -f $PREFIX/lib/libtensorflow.so  # [not win]
         - $CC -o test_c -L${PREFIX}/lib/ -ltensorflow -I${PREFIX}/include/ test_c.c  # [not win]
@@ -197,6 +199,8 @@ outputs:
     test:
       files:
         - test_cc.cc
+      requires:
+        - {{ compiler('cxx') }}
       commands:
         - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win]
         - $CXX -std=c++11 -o test_cc -L${PREFIX}/lib/ -ltensorflow_cc -ltensorflow_framework -I${PREFIX}/include/ test_cc.cc  # [not win]
