pin libprotobuf for libtensorflow_cc

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -193,6 +193,7 @@ outputs:
       host:
         - libcurl  # [linux]
         - zlib  # [linux]
+        - libprotobuf
       run:
         - libprotobuf
         - nsync
